# localsavefile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  release-plz.toml  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  auto-approve.yml  auto-merge.yml  auto-release.yml  cd.yml  ci.yml
localsavefile/: Cargo.toml  README.md
localsavefile-derive/: Cargo.toml  README.md
localsavefile-derive/src/: lib.rs
localsavefile-test/: Cargo.toml  README.md
localsavefile-test/src/: isolate.rs  lib.rs
localsavefile/src/: lib.rs  localsavefile.rs  localsavefilecommon.rs  localsavefilepersistent.rs
