[package]
name = "localsavefile-derive"
authors = ["LeHuman"]
version = "0.2.18"
edition = "2021"
description = "Macro implementation for localsavefile"
repository = "https://github.com/lehuman/localsavefile"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.43"
syn = { version = "2.0.114", features = ["parsing"] }
darling = "0.21.3"
sanitize-filename = "0.6.0"
proc-macro2 = "1.0.105"
