[package]
name = "localsavefile-test"
authors = ["localsavefile-test-author 🧪 <?>"]
version = "0.2.12"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
localsavefile = { path = "../localsavefile" }
savefile = "0.18.5"
