[package]
name = "localsavefile"
authors = ["LeHuman"]
version = "0.2.16"
edition = "2021"
description = "Save and load structs from a local file. A convenience wrapper around the savefile crate."
repository = "https://github.com/lehuman/localsavefile"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "6.0.0"
tracing = "0.1.41"
savefile = { version = "0.20.1", features = ["compression", "derive", "serde"] }
localsavefile-derive = { version = "=0.2.16", path = "../localsavefile-derive" }
sanitize-filename = "0.6.0"
